# honcho-codex-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LIMITATIONS.md  NOTICE.md  README.ko.md  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
scripts/: honcho-env.example  prepare_fresh_install.py
src/honcho_codex_gateway/: __init__.py  app.py  chat_bridge.py  chat_compat.py  cli.py  codex_auth.py  config.py  embeddings.py  gguf_metadata.py  hf_gguf.py  honcho_compose.py  honcho_tokenizer_patch.py  live_codex_client.py  prepare.py  responses_adapter.py
tests/: test_app.py  test_installer_helpers.py
